--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,17 @@
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>1.1.2</version>
 		</dependency>
+		<!--接口文档-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.6.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
